--- a/views/date.erb
+++ b/views/date.erb
@@ -3,6 +3,6 @@
     
     <body>
        <h1> Today </h1>
-       <p> <%= "The date is" %></p>
+       <p> <%= "The date is" + DateTime.now.inspect %></p>
     </body>
 </html>
