Automatically backed up by Learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -3,6 +3,6 @@
     
     <body>
        <h1> Today </h1>
-       <p> <%= "The date is " + Time.now.inspect %></p>
+       <p> <%= "The date is " + Date.now.day %></p>
     </body>
 </html>
