--- a/views/date.erb
+++ b/views/date.erb
@@ -3,6 +3,6 @@
     
     <body>
        <h1> Today </h1>
-       <p> <%= "The date is " + DateTime.now.iso8601 %></p>
+       <p> <%= "The date is " + Date.today.strftime("%A, %B %d, %Y")%></p>
     </body>
 </html>
